general code cleanup and optimization across various classes